userのapiResponse化及びドキュメント整備
